Hid the last code block in the output

--- a/docs/data_model.qmd
+++ b/docs/data_model.qmd
@@ -194,9 +194,9 @@ graph.write_png('schema.png')
 
 ### Example: Storing User-Defined Schemas
 ``` {python}
+#| echo: true
 from sqlmodel import Session
 
-#| echo: true
 with Session(engine) as session:
     # Create a new task definition
     task_def = TaskDefinition(
@@ -293,6 +293,7 @@ with Session(engine) as session:
 ```
 
 ``` {python}
+#| echo: false
 import os
 
 # Clean up database file
